--- a/National-Parks-Slides.Rmd
+++ b/National-Parks-Slides.Rmd
@@ -425,7 +425,7 @@ ggarrange(
 ## Conclusion
 
 - California
-```{r}
+```{r echo = FALSE, message = FALSE, warning = FALSE}
 
 library(ggmap)
 library(dplyr)
@@ -443,9 +443,10 @@ US_map2 <- get_stamenmap(
 
 ggmap(US_map2) +
   geom_density_2d(data = caliconc, aes(x = Longitude, y = Latitude), size = 0.3) +
-  stat_density_2d(data = caliconc, aes(x = Longitude, y = Latitude, fill = stat(level)), size = 0.05, alpha = .1, bins = 10, geom = "polygon", color = 'darkblue') +
+  stat_density_2d(data = caliconc, aes(x = Longitude, y = Latitude, fill = stat(level)), size = 0.05, alpha = .2, bins = 10, geom = "polygon", color = 'darkblue') +
   scale_alpha(guide = 'none') +
-  scale_fill_gradient(low = "darkblue", high = "red", guide = 'none')
+  scale_fill_gradient(low = "darkblue", high = "red", guide = 'none') 
+  
 
     
 ```
