--- a/National-Parks-Slides.Rmd
+++ b/National-Parks-Slides.Rmd
@@ -446,7 +446,7 @@ ggmap(US_map2) +
   stat_density_2d(data = caliconc, aes(x = Longitude, y = Latitude, fill = stat(level)), size = 0.05, alpha = .2, bins = 10, geom = "polygon", color = 'darkblue') +
   scale_alpha(guide = 'none') +
   scale_fill_gradient(low = "darkblue", high = "red", guide = 'none') +
-  labs(x = "Longitude", y = "Latitude", title = "Density of Endangered Species by Location in California")
+  labs(x = "Longitude", y = "Latitude", title = "Density of Endangered Species by National Park in California")
 
     
 ```
